docs/envoy/v1.7.1/_sources/api-v2/config/filter/http/rbac/v2/rbac.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/http/rbac/v2/rbac.proto:

RBAC
====

Role-Based Access Control :ref:`configuration overview <config_http_filters_rbac>`.

.. _envoy_api_msg_config.filter.http.rbac.v2.RBAC:

config.filter.http.rbac.v2.RBAC
-------------------------------

`[config.filter.http.rbac.v2.RBAC proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/config/filter/http/rbac/v2/rbac.proto#L14>`_

RBAC filter config.

.. code-block:: json

  {
    "rules": "{...}",
    "shadow_rules": "{...}"
  }

.. _envoy_api_field_config.filter.http.rbac.v2.RBAC.rules:

rules
  (:ref:`config.rbac.v2alpha.RBAC <envoy_api_msg_config.rbac.v2alpha.RBAC>`) Specify the RBAC rules to be applied globally.
  If absent, no enforcing RBAC policy will be applied.
  
  
.. _envoy_api_field_config.filter.http.rbac.v2.RBAC.shadow_rules:

shadow_rules
  (:ref:`config.rbac.v2alpha.RBAC <envoy_api_msg_config.rbac.v2alpha.RBAC>`) Shadow rules are not enforced by the filter (i.e., returning a 403)
  but will emit stats and logs and can be used for rule testing.
  If absent, no shadow RBAC policy with be applied.
  
  


.. _envoy_api_msg_config.filter.http.rbac.v2.RBACPerRoute:

config.filter.http.rbac.v2.RBACPerRoute
---------------------------------------

`[config.filter.http.rbac.v2.RBACPerRoute proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/config/filter/http/rbac/v2/rbac.proto#L25>`_


.. code-block:: json

  {
    "rbac": "{...}"
  }

.. _envoy_api_field_config.filter.http.rbac.v2.RBACPerRoute.rbac:

rbac
  (:ref:`config.filter.http.rbac.v2.RBAC <envoy_api_msg_config.filter.http.rbac.v2.RBAC>`) Override the global configuration of the filter with this new config.
  If absent, the global RBAC policy will be disabled for this route.
  
  

